fixed bugs reported by spotbugs in class ITDefaultExampleEntitytService.java